--- a/index.html
+++ b/index.html
@@ -72,11 +72,12 @@
 
     <div class="container mx-auto p-4 md:p-8 max-w-5xl">
         
-        <header class="text-center mb-12 rounded-2xl overflow-hidden shadow-lg header-bg">
+        <header class="text-center mb-12 rounded-2xl overflow-hidden shadow-lg header-bg relative">
             <div class="py-12 px-4">
                 <h1 class="text-4xl md:text-5xl font-extrabold text-white mb-4 leading-tight">학생 활동 기반 특기사항 생성기</h1>
                 <p class="text-lg text-white/90 max-w-2xl mx-auto">AI를 활용하여 학생들의 활동 기록을 의미 있는 특기사항으로 변환하세요.</p>
             </div>
+            <p class="absolute bottom-4 right-6 text-sm text-white/50">Designed by 들쌤</p>
         </header>
 
         <!-- API 설정 -->
@@ -281,9 +282,16 @@
             </div>
         </div>
     </div>
+    
+    <footer class="text-center py-6 text-sm text-slate-500">
+        <p>&copy; <span id="copyright-year"></span> Designed by 들쌤. All Rights Reserved.</p>
+    </footer>
 
     <script>
         document.addEventListener('DOMContentLoaded', () => {
+            // Set dynamic copyright year
+            document.getElementById('copyright-year').textContent = new Date().getFullYear();
+
             // Element References
             const apiKeyInput = document.getElementById('api-key');
             const apiProviderSelect = document.getElementById('api-provider');
@@ -901,4 +909,5 @@
     </script>
 </body>
 </html>
+
 
